--- a/conf/experiment/params/local_simplelightfield.yaml
+++ b/conf/experiment/params/local_simplelightfield.yaml
@@ -8,7 +8,7 @@ name: "simplelightfield_test"
 print_loss: False
 save_results: True
 
-tensorboard: False
+tensorboard: True
 log_images: False
 log_videos: False
 
